k8s-stuff/k3s/registry/registry/registry-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: docker-registry
  labels:
    app: registry
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: registry
