k8s-stuff/k3s/registry/registry/registry-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: docker-registry
  annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: registry,websecure,web
        traefik.ingress.kubernetes.io/router.tls: "true"

  labels:
    app: registry
spec:
  tls:
  - hosts:
      - registry.local.lan
    secretName: cert-secret
  rules:
    - host: registry.local.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000

          - pathType: Prefix
            path: "/v2"
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
